# cvDNN-runner

./: CMakeLists.txt  README.md  Timer.h  dnn_types.h  eval_dnn_executor.cpp  eval_dnn_executor.h  eval_executor.cpp  eval_executor.h  main.cpp
